--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ header {
 
 #small-tiramisu {
     height: 150px;
-    max-width: 100%;
+    max-width: 225px ;
 }
 
 
@@ -69,6 +69,15 @@ footer {
 /* TABLET VERSION */
 @media screen and (max-width: 1020px) {
 
+    .row {
+        display: block;
+    }
+
+    .col-sx,
+    .col-dx {
+        width: 100%;
+    }
+
 
 
 }
@@ -82,7 +91,14 @@ footer {
 /* MOBILE VERSION */
 @media screen and (max-width: 640px) {
 
+    .clearfix {
+        display: flex;
+        flex-direction: column;
+    }
 
+    #small-tiramisu {
+    margin: 0 auto;
+}
 
 
 }
