--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,22 @@
 }
 
 :root {
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
     font-size: 12px;
+}
+
+main {
+    background-color: #F6F5F3;
+    padding-bottom: 20px;
 }
 
 .float-sx {
     float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 .clearfix::after {
@@ -21,8 +31,7 @@
 
 /* header */
 header {
-    background-color: bisque;
-    height: 100px;
+    height: 80px;
 }
 
 h1 {
@@ -30,25 +39,39 @@ h1 {
     font-family: "Nerko One", cursive;
     font-weight: 400;
     font-style: normal;
-    line-height: 100px;
+    line-height: 80px;
     margin-left: 20px;
+    font-size: 40px;
 }
 
 
 /* contenuto */
 .container {
-    width: 80%;
-    margin: 50px auto;
-   
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
+
+/* sezione ricetta */
 .title-mobile {
     display: none;
 }
 
-h2 {
-
+h4 {
+    color: #999999;
+    font-weight: normal;
+    font-size: 12px;
 }
+
+h2 {
+    color: #4E3969;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    font-size: 35px;
+}
+
 
 .row {
     display: flex;
@@ -56,7 +79,7 @@ h2 {
 
 .col-sx {
     width: 70%;
-    
+
 }
 
 .col-sx img {
@@ -65,43 +88,127 @@ h2 {
 
 .col-dx {
     width: 30%;
+    background-color: white;
+    padding-left: 30px;
+    padding-top: 25px;
+    line-height: 28px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 5px;
     display: flex;
     flex-direction: column;
+}
+
+h5 {
+    font-size: 20px;
+    padding-bottom: 15px;
 }
 
 /*sezione social */
 .social {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin-top: 25px;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+.social a {
+    color: black;
+    text-decoration: none;
+}
+
+.social-desktop,
+.social-tablet-mobile {
+    background-color: white;
+    padding: 8px 40px;
+    border-radius: 15px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.fa-facebook {
+    color: #1B77F3;
+}
+
+.fa-twitter {
+    color: #009EFF;
+}
+
+.fa-instagram {
+    color: #E04B83;
+}
+
+.fa-pinterest {
+    color: #E52223;
+}
+
+.fa-youtube {
+    color: #E62122;
 }
 
 .social-tablet-mobile {
     display: none;
 }
 
+/* banner */
+.banner img {
+    max-width: 100%;
+}
+
 
 
 /*sezione presentazione ricetta */
+h3 {
+    font-size: 25px;
+    font-weight: normal;
+    margin-top: 25px;
+    margin-bottom: 5px;
+}
+
+.separatore {
+    background-color: orange;
+    height: 2px;
+    width: 70px;
+    margin-bottom: 30px;
+}
+
 #small-tiramisu {
     height: 150px;
     max-width: 225px;
 }
+ p {
+    line-height: 27px;
+ }
 
 /*footer*/
 footer {
     height: 100px;
-    background-color: orange;
+    background-color: #7C69A4;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.info-footer {
+    line-height: 20px;
 }
 
 .nav-footer {
     display: flex;
+    justify-content: end;
 }
 
 .nav-footer ul {
+    color: white;
     display: flex;
+    list-style: none;
+    gap: 15px;
+}
+
+.nav-footer a {
+    color: white;
 }
 
 
